k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: note-canva-ingress
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
    - host: api.note-canva.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
    - host: realtime.note-canva.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: realtime
                port:
                  number: 80
